<resources>

    <string name="app_name">APChem/ChemOly App</string>
    <string name="acid">Acids and Bases</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="welcomestring">Welcome to Android Studio!</string>
    <string name="button">GO!</string>
    <string name="beq">Balancing Equations</string>
    <string name="nav_title">General Chemistry</string>
    <string name="gTitle1">Lists</string>
    <string name="Solubility">Solubility Rules</string>
    <string name="Acids">Strong Acids/Bases</string>
    <string name="Calculators">Calculators</string>
    <string name="BEqua">Balancing Equations</string>
    <string name="FindingPH">pH Calculator</string>
    <string name="OxRules">Oxidation State Rules</string>
    <string name="RedPotentials">Some Common Reduction Potentials</string>
    <string name="Title">Content Review</string>
    <string name="Gibbs">Free Energy Calculator</string>
    <string name="RateLawCalc">Rate Law Calculator</string>
    <string name="t1">Trial</string>
    <string name="rxnrate">Reaction Rate</string>
    <string name="test">Testing</string>
    <string name="solrulestitle">Solubility Rules</string>
    <string name="acidtitle">Strong Acids and Bases</string>
    <string name="pHCalcTitle">pH Calculator</string>
    <string name="StrongA">[Strong Acid]</string>
    <string name="VolStrongA">Volume of Strong Acid</string>
    <string name="StrongB">[Strong Base]</string>
    <string name="VolStrongB">Volume of Strong Base</string>
    <string name="pKaWeakAcid">K&#8336;</string>
    <string name="pKb">Kb</string>
    <string name="WeakA">[Weak Acid]</string>
    <string name="VolWeakA">Volume of Weak Acid</string>
    <string name="WeakB">[Weak Base]</string>
    <string name="VolWeakB">Volume of Weak Base</string>
    <string name="VolAcid">Volume of Acid</string>
    <string name="concAcid">[Acid]</string>
    <string name="oneKa">K&#8336;(for weak acid only)</string>
    <string name="VolBase">Volume of Base</string>
    <string name="concBase">[Base]</string>
    <string name="oneKb">Kb (for weak base only)</string>
    <string name="rate">Rate</string>
    <string name="beq1">Balancing Equations</string>
    <string name="atomprops">Atomic Structure and Properties</string>
    <string name="colorstitle">List of Ion Colors</string>
    <string name="AtomicPropertiesTitle">Atomic Properties</string>
    <string name="ColorsLayoutTitle">Ion Colors</string>
    <!-- Fills up ArrayAdapter for rLawCalc Spinner -->
    <string-array name="numOfReactants">
        <item>How Many Reactants are in this Reaction?</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <!-- Fills up ArrayAdapter for pHCalc Spinner -->
    <string-array name="pHOptions">
        <item>Please Choose an Option</item>
        <item>Strong Acid - Strong Base Titration</item>
        <item>Strong Acid - Weak Base Titration</item>
        <item>Weak Acid - Strong Base Titration</item>
        <item>One Acid</item>
        <item>One Base</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
